reworking queue (continued): merged url queue into main download queue: urls added to queue are now immediately shown in web-interface; urls can be reordered and deleted; when urls are fetched the downloaded nzb-files are put into queue at the positions of their urls; this solves the problem with fetched nzb-files ordered differently than the urls if the fetching of upper (position wise) urls were completed after of the lower urls; removed options "ReloadUrlQueue" and "ReloadPostQueue" since there are no separate url- and post-queues anymore; nzb-files added via urls have new field "URL" which can be accessed via RPC-methods "listgroups" and "history"; new env. var. "NZBNP_URL", "NZBNA_URL" and "NZBPP_URL" passed to NzbProcess, NzbAddedProcess and PostProcess-scripts; removed remote command "--list U", urls are now shown as groups by command "--list G"; RPC-method "urlqueue" is still supported for compatibility but should not be used since the urls are now returned by method "listgroups", the entries have new field "Kind" which can be "NZB" or "URL"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@966 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -793,6 +793,13 @@
 							</div>
 						</div>
 
+						<div class="control-group" id="DownloadsEdit_URLGroup">
+							<label class="control-label" for="DownloadsEdit_URL">Link</label>
+							<div class="controls">
+								<input type="text" class="input-xlarge" id="DownloadsEdit_URL" readonly="true" />
+							</div>
+						</div>
+
 						<div class="control-group">
 							<label class="control-label" for="DownloadsEdit_Priority">Priority</label>
 							<div class="controls">
@@ -801,7 +808,7 @@
 							</div>
 						</div>
 
-						<div class="control-group">
+						<div class="control-group" id="DownloadsEdit_CategoryGroup">
 							<label class="control-label" for="DownloadsEdit_Category">Category</label>
 							<div class="controls">
 								<select id="DownloadsEdit_Category">
@@ -1122,6 +1129,13 @@
 							<label class="control-label" for="HistoryEdit_Status">Status</label>
 							<div class="controls" style="margin-top: 4px;">
 								<span id="HistoryEdit_Status"></span>
+							</div>
+						</div>
+
+						<div class="control-group" id="HistoryEdit_URLGroup">
+							<label class="control-label" for="HistoryEdit_URL">Link</label>
+							<div class="controls">
+								<input type="text" class="input-xlarge" id="HistoryEdit_URL" readonly="true" />
 							</div>
 						</div>
 
@@ -2247,6 +2261,10 @@
 
 <div id="Notif_Downloads_CheckPostProcess" data-duration="2000" class="alert alert-error alert-center alert-center-medium hide">
     <strong>Post-processing-downloads cannot be edited</strong>
+</div>
+
+<div id="Notif_Downloads_CheckURL" data-duration="2000" class="alert alert-error alert-center alert-center-medium hide">
+    <strong>URLs cannot be merged or paused</strong>
 </div>
 
 <div id="Notif_Edit_Select" data-duration="2000" class="alert alert-error alert-center alert-center-small hide">
