better handling of incorrect system clock date (such as 01-01-2000) in data volume meter
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@974 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -719,11 +719,11 @@
 						<button class="btn volume-range btn-inverse" id="StatDialog_Volume_MIN" onclick="StatDialog.chooseRange('MIN')" title="Show last 60 seconds">60 seconds</button>
 						<button class="btn volume-range" id="StatDialog_Volume_HOUR" onclick="StatDialog.chooseRange('HOUR')" title="Show last 60 minutes">60 minutes</button>
 						<button class="btn volume-range" id="StatDialog_Volume_DAY" onclick="StatDialog.chooseRange('DAY')" title="Show last 24 hours">24 hours</button>
-						<button class="btn volume-range" id="StatDialog_Volume_MONTH" onclick="StatDialog.chooseRange('MONTH')" title="Show a month or a whole year">January 2014</button>
+						<button class="btn volume-range" id="StatDialog_Volume_MONTH" onclick="StatDialog.chooseRange('MONTH')" title="Show a month or a whole year">January 2000</button>
 						<button class="btn volume-range dropdown-toggle" id="StatDialog_Volume_MONTH3" data-toggle="dropdown"><span class="caret"></span></button>
 						<ul class="dropdown-menu menu-check pull-right" id="StatDialog_MonthMenu">
 							<li class="menu-header">Months</li>
-							<li class="volume-month-template hide"><a href="#">March 2014</a></li>
+							<li class="volume-month-template hide"><a href="#"></a></li>
 							<li class="menu-header" id="StatDialog_MonthMenuYears">Years</li>
 							<li class="divider" id="StatDialog_MonthMenuDivider"></li>
 							<li><a href="#" onclick="StatDialog.chooseOtherMonth()"><i class="icon-empty"></i>Older Periods...</a></li>
@@ -734,7 +734,7 @@
 					<div class="btn-group phone-only inline"><button class="btn volume-range btn-inverse" id="StatDialog_Volume_MIN2" onclick="StatDialog.chooseRange('MIN')" title="Show last 60 seconds">60 s</button></div>
 					<div class="btn-group phone-only inline"><button class="btn volume-range" id="StatDialog_Volume_HOUR2" onclick="StatDialog.chooseRange('HOUR')" title="Show last 60 minutes">60 m</button></div>
 					<div class="btn-group phone-only inline"><button class="btn volume-range" id="StatDialog_Volume_DAY2" onclick="StatDialog.chooseRange('DAY')" title="Show last 24 hours">24 h</button></div>
-					<div class="btn-group phone-only inline"><button class="btn volume-range" id="StatDialog_Volume_MONTH2" onclick="StatDialog.chooseRange('MONTH')" title="Show one month">Jan 2014</button></div>
+					<div class="btn-group phone-only inline"><button class="btn volume-range" id="StatDialog_Volume_MONTH2" onclick="StatDialog.chooseRange('MONTH')" title="Show one month">Jan 2000</button></div>
 					<!-- MONTH MENU IN MINI-THEME -->
 					<div class="btn-group phone-only inline" id="StatDialog_MonthBlockPhone">
 					<button class="btn volume-range dropdown-toggle" id="StatDialog_Volume_MONTH4" data-toggle="dropdown"><span class="caret"></span></button>
