updated all links to go to new domain (nzbget.net)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@978 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -521,7 +521,7 @@
 									There are many configuration options affecting performance. If you use
 									NZBGet on a computer with limited capabilities, such as NAS, media player,
 									router, etc. you should take your time to configure NZBGet for best
-									performance - see <a href="http://nzbget.sourceforge.net/Performance_tips">Performance tips</a>.
+									performance - see <a href="http://nzbget.net/Performance_tips">Performance tips</a>.
 									</p>
 
 									<h4>Post-processing scripts settings</h4>
@@ -647,8 +647,8 @@
 		<p>Additional exemption: compiling, linking, and/or using OpenSSL is allowed.</p>
 
 		<h2>Contact</h2>
-		<p>For more info please visit <a href="http://nzbget.sourceforge.net">NZBGet Home Page</a>. Among other things the developers of third-party apps find there complete docs about RPC interface.</p>
-		<p>Should you need help, have suggestions or want to share your improvements - <a href="http://nzbget.sourceforge.net/forum">NZBGet Forum</a> is a place to do that.</p>
+		<p>For more info please visit <a href="http://nzbget.net">NZBGet Home Page</a>. Among other things the developers of third-party apps find there complete docs about RPC interface.</p>
+		<p>Should you need help, have suggestions or want to share your improvements - <a href="http://nzbget.net/forum">NZBGet Forum</a> is a place to do that.</p>
 		<p>If you use NZBGet on a media player, router, NAS or other non-PC device the best place to get help is probably forums specialized on your device.</p>
 
 		<h1>Information about included libraries</h1>
@@ -1727,7 +1727,7 @@
 
 		<p><span class="label label-warning">NOTE:</span>
 		This is a short documentation. For more info visit
-		<a href="http://nzbget.sourceforge.net/RSS">nzbget.sourceforge.net/RSS</a>.
+		<a href="http://nzbget.net/RSS">nzbget.net/RSS</a>.
 		</p>
 	</div>
 </div>
@@ -2197,7 +2197,7 @@
 	<p class="alert alert-info">
 	If you compiled the program yourself you know how to update.
 	If you installed a binary package ask maintainer to add support for automatic updates.
-	If you create a public package please read <a href="http://nzbget.sourceforge.net/Packaging" target="_blank">"About Packaging"</a>.
+	If you create a public package please read <a href="http://nzbget.net/Packaging" target="_blank">"About Packaging"</a>.
 	</p>
 	</div>
 	
