--- a/webui/index.html
+++ b/webui/index.html
@@ -931,7 +931,7 @@
 						<div class="control-group control-group-last" id="DownloadsEdit_StatisticsGroup">
 							<label class="control-label" for="DownloadsEdit_Statistics">Statistics</label>
 							<div class="controls">
-							<table class="table table-striped table-bordered data-statistics">
+							<table class="table table-striped table-bordered data-statistics-wide">
 								<tbody id="DownloadsEdit_Statistics">
 								</tbody>
 							</table>
@@ -1001,6 +1001,18 @@
 				<div class="form-horizontal">
 					<fieldset id="DownloadsEdit_ParamData">
 					</fieldset>
+				</div>
+			</div>
+
+			<div class="modal-tab padded-tab hide" id="DownloadsEdit_ServStatsTab">
+				<div>
+					<div id="DownloadsEdit_ServStatsBlock">
+						<table class="table table-striped table-bordered datatable" id="DownloadsEdit_ServStatsTable">
+							<thead><tr><th>Server</th><th class="text-right">Articles</th><th class="text-right">Art. %</th><th class="text-right">Success</th><th class="text-right">Failures</th></tr></thead>
+							<tbody></tbody>
+						</table>
+					</div>
+					<div class="pull-right hide" id="DownloadsEdit_ServStatsTable_pagerBlock"><div class="pagination" id ="DownloadsEdit_ServStatsTable_pager"></div></div>
 				</div>
 			</div>
 
@@ -1305,7 +1317,7 @@
 			<div class="modal-tab padded-tab hide" id="HistoryEdit_ServStatsTab">
 				<div>
 					<div id="HistoryEdit_ServStatsBlock">
-						<table class="table table-striped table-bordered datatable" id="HistoryEdit_ServStatsTable" style="margin-bottom:15px;">
+						<table class="table table-striped table-bordered datatable" id="HistoryEdit_ServStatsTable">
 							<thead><tr><th>Server</th><th class="text-right">Articles</th><th class="text-right">Art. %</th><th class="text-right">Success</th><th class="text-right">Failures</th></tr></thead>
 							<tbody></tbody>
 						</table>
