corrected html formatting for statistics data in details dialog
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@986 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -901,7 +901,7 @@
 							<label class="control-label" for="DownloadsEdit_NZBNameGroup">Name</label>
 							<div class="controls" id="DownloadsEdit_NZBNameGroup">
 								<input type="text" class="input-xlarge" id="DownloadsEdit_NZBName" />
-								<p class="help-block help-block-uneditable" id="DownloadsEdit_NZBNameReadonly">Name and other properties cannot be changed for post-processing-downloads.</p>
+								<p class="help-block help-block-uneditable" id="DownloadsEdit_NZBNameReadonly">Cannot be changed for post-processing-downloads.</p>
 							</div>
 						</div>
 
@@ -931,7 +931,7 @@
 						<div class="control-group control-group-last" id="DownloadsEdit_StatisticsGroup">
 							<label class="control-label" for="DownloadsEdit_Statistics">Statistics</label>
 							<div class="controls">
-							<table class="table table-striped table-bordered data-statistics-wide">
+							<table class="table table-striped table-bordered data-statistics">
 								<tbody id="DownloadsEdit_Statistics">
 								</tbody>
 							</table>
