implemented general scripts concept which is an extension of the post-processing scripts concept initially introduced in v11; the general scripts concept applies to all scripts used in the program: scan-script, queue-script and scheduler-script (in addition to post-processing scripts); option "NzbProcess" renamed to "ScanScript"; option "NzbAddedProcess" renamed to "QueueScript"; option "DefScript" and "CategoryX.DefScript" renamed to "PostScript" and "CategoryX.PostScript" (options with old names are recognized and automatically converted on first settings saving); new option "TaskX.Script"; old option "TaskX.Process" kept for scheduling of external programs not related to nzbget (to avoid writing of intermediate proxy scripts); scan-script, queue-script and scheduler-script now work similar to post-processing scripts: -scripts must be put into scripts-directory; -scripts can be configured via web-interface and can have options; -multiple scripts can be chosen for each scripts-option, all chosen scripts are executed; -program and script options are passed to the script as env. variables;; renamed default directory with scripts from "ppscripts" to "scripts"; script signature indicates the type of script (post-processing, scan, queue or scheduler); one script can have mixed signature allowing it to be used for multiple purposes (for example a notification script can send a notification on both events: after adding to queue and after post-processing); result of RPC-method "configtemplates" has new fields "PostScript", "ScanScript", "QueueScript", "SchedulerScript" to indicate the purpose of the script; queue-script (formerly NzbAddedProcess) has new parameter "NZBNA_EVENT" indicating the reason of calling the script; currently the script is called only after adding of files to download queue and therefore the parameter is always set to "NZB_ADDED" but the queue-script can be called on other events in the future too
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk

--- a/webui/index.html
+++ b/webui/index.html
@@ -524,13 +524,13 @@
 									performance - see <a href="http://nzbget.net/Performance_tips">Performance tips</a>.
 									</p>
 
-									<h4>Post-processing scripts settings</h4>
+									<h4>Scripts settings</h4>
 									<p>
 									When NZBGet finishes download of a nzb-file it can execute post-processing scripts for further processing (cleanup, etc.).
-									To configure scripts use options in section <em><strong>POST-PROCESSING SCRIPTS</strong></em>.
+									To configure scripts use options in section <em><strong>SCRIPTS</strong></em>.
 									</p>
 									<p>
-									If your post-processing scripts define own options they are also shown here and can be configured like NZBGets built-in options.
+									If your scripts define own options they are also shown here and can be configured like NZBGets built-in options.
 									</p>
 
 									<h4>Backup and restore settings</h4>
@@ -2077,7 +2077,7 @@
 		<div class="form-vertical">
 			<fieldset>
 
-				<p id="ScriptListDialog_Instruction">Select scripts for option <strong>DefScript</strong></p>
+				<p id="ScriptListDialog_Instruction">Select scripts for option <strong>PostScript</strong></p>
 
 				<div>
 					<table class="table table-striped table-bordered table-check table-cancheck order-mode datatable" id="ScriptListDialog_ScriptTable" style="margin-bottom:15px;">
