renamed section "SCRIPTS" to "EXTENSION SCRIPTS" in the settings
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1025 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -524,10 +524,10 @@
 									performance - see <a href="http://nzbget.net/Performance_tips">Performance tips</a>.
 									</p>
 
-									<h4>Scripts settings</h4>
+									<h4>Extension scripts settings</h4>
 									<p>
-									When NZBGet finishes download of a nzb-file it can execute post-processing scripts for further processing (cleanup, etc.).
-									To configure scripts use options in section <em><strong>SCRIPTS</strong></em>.
+									When NZBGet finishes download of a nzb-file it can execute post-processing scripts for further processing (e-mail notification, etc.). 
+									To configure scripts use options in section <em><strong>EXTENSION SCRIPTS</strong></em>.
 									</p>
 									<p>
 									If your scripts define own options they are also shown here and can be configured like NZBGets built-in options.
