--- a/webui/index.html
+++ b/webui/index.html
@@ -1327,6 +1327,18 @@
 				</div>
 			</div>
 
+			<div class="modal-tab padded-tab hide" id="HistoryEdit_TimeStatsTab">
+				<div>
+					<div id="HistoryEdit_TimeStatsBlock">
+						<table class="table table-striped table-bordered datatable" id="HistoryEdit_TimeStatsTable">
+							<thead><tr><th>Statistic</th><th class="text-center">Data</th></tr></thead>
+							<tbody></tbody>
+						</table>
+					</div>
+					<div class="pull-right hide" id="HistoryEdit_TimeStatsTable_pagerBlock"><div class="pagination" id ="HistoryEdit_TimeStatsTable_pager"></div></div>
+				</div>
+			</div>
+
 			<div class="modal-tab hide" id="HistoryEdit_DupeTab">
 				<div class="form-horizontal">
 					<fieldset>
