added new search field "dupestatus" for use in rss filters: the search is performed through download queue and history testing items with the same dupekey or title as current rss item; the field contains comma-separated list of following possible statuses (if duplicates were found): QUEUED, DOWNLOADING, SUCCESS, WARNING, FAILURE or an empty string if there were no matching items found
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1086 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1708,7 +1708,7 @@
 
 		<ul>
 		<li>Commands @ and $ are for use with text fields (title, filename, category,
-		link, description, dupekey).</li>
+		link, description, dupekey, dupestatus).</li>
 		<li>Commands =, &lt;, &lt;=, &gt; and &gt;= are for use with numeric fields (size, age,
 		imdbid, rageid, season, episode, priority, dupescore).</li>
 		<li>Any newznab attribute (encoded as "newznab:attr" in the RSS feed) can be used
