added column "age" to history tab in web-interface
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1142 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -367,6 +367,7 @@
 					<th width="170px" class="text-center">Time</th>
 					<th>Name</th>
 					<th id="HistoryTable_Category">Category</th>
+					<th width="30px" class="text-right">Age</th>
 					<th width="70px" class="text-right">Size</th>
 				</tr></thead>
 				<tbody></tbody>
