added confirmation dialogs to recently implemented mass history edit commands "mark as good" and "mark as bad"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1185 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1913,7 +1913,7 @@
 	<div id="HistoryEditGoodConfirmDialog_Title">History</div>
 	<div id="HistoryEditGoodConfirmDialog_Text">
 		<p>
-		Mark this history record as good?
+		Mark selected history records as good?
 		</p>
 		<p class="confirm-help-block">
 		Marking has an effect on duplicate handling and RSS.<br>For titles marked as good no more duplicates
@@ -1929,7 +1929,7 @@
 	<div id="HistoryEditBadConfirmDialog_Title">History</div>
 	<div id="HistoryEditBadConfirmDialog_Text">
 		<p>
-		Mark this history record as Bad?
+		Mark selected history records as Bad?
 		</p>
 		<p class="confirm-help-block">
 		Marking has an effect on duplicate handling and RSS.<br>If dupe-backups exist in the history
