--- a/webui/index.html
+++ b/webui/index.html
@@ -1027,10 +1027,29 @@
 			</div>
 
 			<div class="modal-tab hide" id="DownloadsEdit_LogTab">
+				<div class="loading-block">
+					<img src="img/transmit.gif"></img>
+				</div>
 				<div>
-					<div class="row-fluid">
-						<div class="pull-left">Post-Processing Messages</div>
-						<div class="pull-right" style="margin-bottom:10px;"><input id="DownloadsEdit_LogTable_filter" class="search-query" placeholder="Search" type="text"></div>
+					<div class="form-inline clearfix modal-toolbox">
+						<div id="DownloadsLogRecordsPerPageBlock" class="pull-left toolbox-length">
+							<select size="1" id="DownloadsLogRecordsPerPage" onchange="LogTab.recordsPerPageChange('Downloads')">
+								<option value="5">5</option>
+								<option selected="selected" value="10">10</option>
+								<option value="15">15</option>
+								<option value="20">20</option>
+								<option value="30">30</option>
+								<option value="50">50</option>
+								<option value="100">100</option>
+								<option value="200">200</option>
+								<option value="500">500</option>
+								<option value="1000">1000</option>
+							</select><span class="records-label"> records per page</span>
+						</div>
+						<div id="DownloadsEdit_LogTable_filterBlock">
+							<input id="DownloadsEdit_LogTable_filter" class="search-query" placeholder="Search" type="text">
+						</div>
+						<div id ="DownloadsEdit_LogTable_pagerBlock" class="pull-right"><div class="pagination" id ="DownloadsEdit_LogTable_pager"></div></div>
 					</div>
 					<div id="DownloadsEdit_LogBlock">
 						<table class="table table-striped table-bordered datatable" id="DownloadsEdit_LogTable" style="margin-bottom:15px;">
@@ -1038,7 +1057,6 @@
 							<tbody></tbody>
 						</table>
 					</div>
-					<div class="pull-right hide" id="DownloadsEdit_LogTable_pagerBlock"><div class="pagination" id ="DownloadsEdit_LogTable_pager"></div></div>
 				</div>
 			</div>
 
@@ -1316,6 +1334,7 @@
 								<div class="modal-bottom-toolbar">
 									<button class="btn" data-tab="HistoryEdit_ParamTab" id="HistoryEdit_Param" title="Post-processing parameters">Postprocess <i class="icon-forward" style="opacity:0.6;"></i></button>
 									<button class="btn" data-tab="HistoryEdit_DupeTab" id="HistoryEdit_Dupe" title="Duplicate properties">Dupe <i class="icon-forward" style="opacity:0.6;"></i></button>
+									<button class="btn" data-tab="HistoryEdit_LogTab" data-fullscreen="true" id="HistoryEdit_Log" title="Post-processing messages">Log <i class="icon-forward" style="opacity:0.6;"></i></button>
 								</div>
 							</div>
 						</div>
@@ -1328,6 +1347,40 @@
 				<div class="form-horizontal">
 					<fieldset id="HistoryEdit_ParamData">
 					</fieldset>
+				</div>
+			</div>
+
+			<div class="modal-tab hide" id="HistoryEdit_LogTab">
+				<div class="loading-block">
+					<img src="img/transmit.gif"></img>
+				</div>
+				<div>
+					<div class="form-inline clearfix modal-toolbox">
+						<div id="HistoryLogRecordsPerPageBlock" class="pull-left toolbox-length">
+							<select size="1" id="HistoryLogRecordsPerPage" onchange="LogTab.recordsPerPageChange('History')">
+								<option value="5">5</option>
+								<option selected="selected" value="10">10</option>
+								<option value="15">15</option>
+								<option value="20">20</option>
+								<option value="30">30</option>
+								<option value="50">50</option>
+								<option value="100">100</option>
+								<option value="200">200</option>
+								<option value="500">500</option>
+								<option value="1000">1000</option>
+							</select><span class="records-label"> records per page</span>
+						</div>
+						<div id="HistoryEdit_LogTable_filterBlock">
+							<input id="HistoryEdit_LogTable_filter" class="search-query" placeholder="Search" type="text">
+						</div>
+						<div id ="HistoryEdit_LogTable_pagerBlock" class="pull-right"><div class="pagination" id ="HistoryEdit_LogTable_pager"></div></div>
+					</div>
+					<div id="HistoryEdit_LogBlock">
+						<table class="table table-striped table-bordered datatable" id="HistoryEdit_LogTable" style="margin-bottom:15px;">
+							<thead><tr><th width="65px">Kind</th><th width="170px" class="text-center">Time</th><th>Text</th></tr></thead>
+							<tbody></tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 
