1) added button "Test Connection" to make a news server connection test from web-interface; 2) improved timeout handling when connecting to news servers which have multiple addresses; 3) improved error handling when communicating with secure servers (do not trying to send quit-command if connection could not be established or was interrupted; this avoids unnecessary timeout)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1250 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -2609,5 +2609,13 @@
     <strong>Volume reset</strong>
 </div>
 
+<div id="Notif_Config_TestConnectionProgress" data-duration="20000" class="alert alert-inverse alert-center alert-center-small hide">
+    <strong>Testing connection...</strong>
+</div>
+
+<div id="Notif_Config_TestConnectionOK" data-duration="1000" class="alert alert-success alert-center alert-center-small hide">
+    <strong>Connection successful</strong>
+</div>
+
 </body>
 </html>
